--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Global scripts -->
     <script src="libs/vue.js" type="text/javascript"></script>
+    <script src="libs/flatMap-polyfill.js" type="text/javascript"></script>
     <script src="src/router.cmds.js" type="text/javascript"></script>
     <script src="src/switch.cmds.js" type="text/javascript"></script>
     <script src="src/index.js" type="text/javascript"></script>
